--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 /db/*.sqlite3-*
+/db/seeds.rb
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -42,3 +43,5 @@ yarn-debug.log*
 
 # Ignore db test files.
 db/test.*
+
+/.env
